<resources>
    <string name="app_name">TaburTuai</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slogan" translatable="false">Bertumbuh, \nBerbuah, \nBerlimpah</string>
    <string name="deskripsi">Platform smart farming berbasis IoT karya anak bangsa</string>
    <string name="mulai">Mulai</string>
    <string name="monitoring">Monitoring</string>
    <string name="controlling">Controlling</string>
    <string name="temperature">Temperatur</string>
    <string name="kelembaban_tanah">Kelembaban Tanah</string>
    <string name="kecepatan_air">Kecepatan Air</string>
    <string name="arah_angin">Arah Angin</string>
    <string name="kecepatan_angin">Kecepatan Angin</string>
    <string name="ph_tanah">PH Tanah</string>
    <string name="icon_suhu">icon suhu</string>
    <string name="icon_kelembaban">icon kelembaban</string>
    <string name="icon_ph_tanah">icon ph tanah</string>
    <string name="icon_kecepatan_air">icon kecepatan air</string>
    <string name="icon_arah_angin">icon arah angin</string>
    <string name="icon_kecepatan_angin">icon kecepatan angin</string>
    <string name="icon_item_controlling">icon_item_controlling</string>
    <string name="gambar_kebun">gambar kebun</string>
    <string name="toolbar">Toolbar</string>
    <string name="kode">Kode</string>
    <string name="luas">Luas</string>
    <string name="lokasi">Lokasi</string>
    <string name="colon">:</string>
    <string name="smart_farming">Smart Farming</string>
    <string name="id">ID</string>
    <string name="email">Email</string>
    <string name="cpassword">Konfirmasi Password</string>
    <string name="no_telepon">Nomor telepon</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="masuk_untuk_melanjutkan">Masuk untuk melanjutkan</string>
    <string name="logo">logo</string>
    <string name="masuk_dengan">Masuk dengan</string>
    <string name="google">Google</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="daftar_untuk_melanjutkan">Daftar untuk melanjutkan</string>
    <string name="daftar_dengan">Daftar dengan</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="nama">Nama</string>
    <string name="telepon">Telepon</string>
    <string name="home">Home</string>
    <string name="akun">Akun</string>
    <string name="halo">Halo %1$s</string>
    <string name="msg_login_successfully">Berhasil masuk</string>
    <string name="msg_email_pass_might_be_wrong">Email atau password salah</string>
    <string name="msg_account_registered">Berhasil daftar akun</string>
    <string name="msg_failed_to_register">Gagal daftar akun</string>
    <string name="password_not_match">Password tidak sama</string>
    <string name="email_empty">Email tidak boleh kosong</string>
    <string name="email_invalid">Email tida valid</string>
    <string name="name_empty">Nama tidak boleh kosong</string>
    <string name="phone_empty">Nomor telepon tidak boleh kosong</string>
    <string name="phone_invalid">Jumlah digit nomor telepon tidak valid</string>
    <string name="password_empty">Password tidak boleh kosong</string>
    <string name="password_length_invalid">Panjang password kurang dari 6 karakter</string>
    <string name="action_profile">Action profile</string>
    <string name="msg_login_with_google_acc">Berhasil masuk dengan google</string>
    <string name="default_web_client_id_2">228509552110-7gdr2988lk0s80sk7p2qfssak2hrd4da.apps.googleusercontent.com</string>
    <string name="id_petani_not_found">ID petani tidak ditemukan</string>
    <string name="wrong_password">Password salah</string>
    <string name="kebun_petani">Kebun %1$s</string>
    <string name="failed_get_data_offline">Offline: gagal mendapatkan data</string>
    <string name="dipersembahkan_oleh">Dipersembahkan oleh</string>
    <string name="lihat_password">Lihat password</string>
    <string name="cari_kebun">Cari kebun</string>
    <string name="tidak_ada_kebun">Tidak ada kebun</string>
    <string name="tidak_ada_data_luas_kebun">Tidak ada data luas kebun</string>
    <string name="tidak_ada_data_lokasi">Tidak ada data lokasi</string>
    <string name="kebun">Kebun</string>
    <string name="mati">Mati</string>
    <string name="nyala">Menyala</string>
    <string name="unknown">-</string>
    <string name="tidak_ada_jaringan">Tidak ada jaringan internet</string>
    <string name="tidak_ada_jaringan_update_terakhir">Tidak ada jaringan internet \nUpdate terakhir: %1$s</string>
    <string name="error">error</string>
    <string name="kembali_online">Kembali online</string>
    <string name="profile">Profile</string>
    <string name="petani">Petani</string>
    <string name="beri_masukan_des">Yukk bantu TaburTuai jadi lebih baik lagi dengan cara beri kami masukan</string>
    <string name="feedback">Feedback</string>
    <string name="kirim">Kirim</string>
    <string name="tulis_masukanmu_disini">Tulis masukanmu disini</string>
    <string name="ide">Ide</string>
    <string name="gangguan_teknis">Gangguan teknis</string>
    <string name="error_msg_pilih_jenis_masukan">Pilih jenis masukan dulu ya</string>
    <string name="masukan_masih_kosong">Masukanmu masih kosong</string>
    <string name="jumlah_karakter_masukan_lebih">Jumlah karakter melebihi batas maksimum</string>
    <string name="berhasil_kirim_masukan">Berhasil mengirim masukan</string>
    <string name="gagal_kirim_masukan">Gagal mengirim masukan</string>
    <string name="keluar">Keluar</string>
    <string name="yakin_ingin_keluar">Yakin ingin keluar?</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="max_feedback">Kamu hanya bisa mengirim 3 masukan perhari ya. \nHal ini untuk menghindari spam</string>
    <string name="kirim_secara_anonim">Kirim secara anonim</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="simpan">Simpan</string>
    <string name="action_save">action_save</string>
    <string name="berhasil_ubah_data">Berhasil mengubah data</string>
    <string name="gagal_ubah_data">Gagal mengubah data</string>
    <string name="kelembaban_udara">Kelembaban Udara</string>
    <string name="versi">Versi %1$s</string>
    <string name="lengkapi_no_telepon">Silahkan lengkapi nomor telepon Anda</string>
    <string name="tidak_ada_data_monitoring">Tidak ada data monitoring</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="beri_masukan">Beri Masukan</string>
    <string name="jenis_masukan">Jenis masukan</string>
    <string name="ayo_mulai_gunakan_smart_farming_bersama_tabur_tuai">Ayo mulai gunakan Smart Farming bersama TaburTuai</string>
    <string name="petani_amp_kebun"><![CDATA[Petani & Kebun]]></string>
    <string name="lihat_data_petani_dan_kebunmu_disini">Lihat data petani dan kebunmu disini</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="selalu_masuk_akun_petani">Selalu masuk akun petani</string>
    <string name="kamu_akan_selalu_masuk_akun_petani_meski_telah_keluar_dari_aplikasi">Kamu akan selalu masuk akun petani meski telah keluar dari aplikasi</string>
    <string name="ganti_bahasa">Ganti bahasa</string>
    <string name="drop_a_line">Drop a line</string>
    <string name="welcome_page">Welcome page</string>
    <string name="hyphen">-</string>
    <string name="icon">icon</string>
    <string name="tutorial_smart_farming">Tutorial Smart Farming</string>
    <string name="penyakit_tumbuhan">Penyakit Tumbuhan</string>
    <string name="artikel">Artikel</string>
    <string name="akses_smart_farming">Akses Smart Farming</string>
    <string name="cara_kerja_smart_farming">Cara Kerja\nSmart Farming</string>
    <string name="cara_kerja_smart_farming2">Cara Kerja Smart Farming</string>
    <string name="cara_menggunakan_smart_farming">Cara Menggunakan Smart Farming</string>
    <string name="cara_daftar_smart_farming">Cara Daftar\nSmart Farming</string>
    <string name="artikel_lainnya">Artikel lainnya</string>
    <string name="pilih_foto">Pilih Foto</string>
    <string name="dipublikasikan_pada">Dipublikasikan pada %1$s</string>
    <string name="oleh">Oleh %1$s</string>
    <string name="monday">Senin</string>
    <string name="tuesday">Selasa</string>
    <string name="wednesday">Rabu</string>
    <string name="thursday">Kamis</string>
    <string name="friday">Jumat</string>
    <string name="saturday">Sabtu</string>
    <string name="Sunday">Minggu</string>
    <string name="gambar_penyakit_tumbuhan">Gambar penyakit tumbuhan</string>
    <string name="gambar_artikel">gambar artikel</string>
    <string name="disukai">Disukai</string>
    <string name="solusi">Solusi</string>
    <string name="gagal_mendapat_data">Gagal mendapatkan data</string>
    <string name="jelajahi_artikel">Jelajahi Artikel</string>
    <string name="semua">Semua</string>
    <string name="informasi">Informasi</string>
    <string name="edukasi">Edukasi</string>
    <string name="pencarian">Pencarian</string>
    <string name="lainnya">Lainnya</string>
    <string name="jelajahi_penyakit_tumbuhan">Jelajahi Penyakit Tumbuhan</string>
    <string name="penyakit_tumbuhan_terpopuler">Penyakit Tumbuhan Terpopuler</string>
    <string name="penyakit_tumbuhan_lainnya">Penyakit Tumbuhan Lainnya</string>
    <string name="realtime_dari">Realtime Kebun</string>
    <string name="perkiraan_cuaca">Perkiraan Cuaca</string>
    <string name="dini_hari">Dini Hari</string>
    <string name="pagi">Pagi</string>
    <string name="siang">Siang</string>
    <string name="malam">Malam</string>
    <string name="cerah">Cerah</string>
    <string name="cerah_berawan">Cerah Berawan</string>
    <string name="berawan">Berawan</string>
    <string name="udara_kabur">Udara Kabur</string>
    <string name="asap">Asap</string>
    <string name="kabut">Kabut</string>
    <string name="hujan_ringan">Hujan Ringan</string>
    <string name="hujan_sedang">Hujan Sedang</string>
    <string name="hujan_lebat">Hujan Lebat</string>
    <string name="hujan_lokal">Hujan Lokal</string>
    <string name="hujan_petir">Hujan Petir</string>
    <string name="utara">Utara</string>
    <string name="utara_timur_laut">Utara - Timur Laut</string>
    <string name="timur_laut">Timur Laut</string>
    <string name="timur_timur_laut">Timur - Timur Laut</string>
    <string name="timur">Timur</string>
    <string name="timur_tenggara">Timur - Tenggara</string>
    <string name="tenggara">Tenggara</string>
    <string name="selatan_tenggara">Selatan - Tenggara</string>
    <string name="selatan">Selatan</string>
    <string name="selatan_barat_daya">Selatan - Barat Daya</string>
    <string name="barat_daya">Barat Daya</string>
    <string name="barat_barat_daya">Barat - Barat Daya</string>
    <string name="barat">Barat</string>
    <string name="barat_barat_laut">Barat - Barat Laut</string>
    <string name="barat_laut">Barat Laut</string>
    <string name="utara_barat_laut">Utara - Barat Laut</string>
    <string name="berubah_ubah">Berubah - ubah</string>
    <string name="load_web">Memuat halaman web</string>
    <string name="load_web_success">Berhasil memuat website</string>
    <string name="web_url_cara_kerja_smartfarming">https://faperta.umsu.ac.id/2023/04/13/pengertian-pentingnya-dan-cara-kerja-smart-farming/</string>
    <string name="pengenalan_smart_farming">Pengenalan\nSmart Farming</string>
    <string name="pengenalan_smart_farming2">Pengenalan Smart Farming</string>
    <string name="web_url_pengenalan_smart_farming">https://youtu.be/2gfJost-yhw</string>
    <string name="daftar_smart_farming">Daftar Smart Farming</string>
    <string name="halo_petani_milenial">Halo Petani Milenial</string>
    <string name="mau_kebunmu_menerapkan_smart_farming">Mau kebunmu menerapkan Smart Farming?</string>
</resources>