<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.loginsignup.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tv_daftar"
                style="@style/Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginTop="20dp"
                android:text="@string/masuk"
                android:textColor="@color/green"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_masuk_untuk_melanjutkan"
                style="@style/SubSubHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginTop="10dp"
                android:text="@string/masuk_untuk_melanjutkan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_daftar" />

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:layout_marginTop="50dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@id/tv_masuk_untuk_melanjutkan" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_masuk_email"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="50dp"
                android:hint="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_logo"
                app:startIconDrawable="@drawable/icon_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_masuk_email"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_masuk_password"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/il_masuk_email"
                app:startIconDrawable="@drawable/icon_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_masuk_password"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cb_show_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lihat_password"
                app:layout_constraintStart_toStartOf="@id/il_masuk_password"
                app:layout_constraintTop_toBottomOf="@id/il_masuk_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_masuk"
                style="@style/SubSubHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="@dimen/margin_start_end"
                android:background="@drawable/login_btn_selector"
                android:text="@string/masuk"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cb_show_pass" />

            <TextView
                android:id="@+id/tv_masuk_dengan"
                style="@style/TitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/masuk_dengan"
                app:layout_constraintTop_toBottomOf="@id/bt_masuk" />

            <androidx.appcompat.widget.AppCompatButton
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="10dp"
                android:id="@+id/bt_google"
                style="@style/SubSubHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/margin_start_end"
                android:background="@drawable/google_btn_selector"
                android:drawableStart="@drawable/icon_google_resize"
                android:paddingStart="7dp"
                android:paddingEnd="37dp"
                android:text="@string/google"
                android:textAllCaps="false"
                android:textColor="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_masuk_dengan" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_marginBottom="20dp"
            android:id="@+id/ll_daftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_sudah_punya_akun"
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/belum_punya_akun"
                app:layout_constraintTop_toBottomOf="@id/bt_daftar" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_sudah_punya_akun"
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/daftar"
                android:textAllCaps="false"
                android:textColor="@color/green"
                app:layout_constraintTop_toBottomOf="@id/bt_daftar" />
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>