<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.WelcomePageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/welcome_page"
            android:scaleType="fitStart"
            android:src="@drawable/img_welcome_page"

            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_slogan"
            style="@style/Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_end"
            android:layout_marginEnd="@dimen/margin_start_end"
            android:text="@string/slogan"
            android:textAlignment="textStart"
            android:textColor="@color/green"
            android:textSize="34sp"
            app:layout_constraintTop_toBottomOf="@id/img" />

        <TextView
            android:id="@+id/tv_des"
            style="@style/SubSubHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_end"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/margin_start_end"
            android:text="@string/deskripsi"
            android:textAlignment="textStart"
            app:layout_constraintTop_toBottomOf="@id/tv_slogan"
            tools:layout_editor_absoluteX="24dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_mulai"
            style="@style/SubSubHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/mulai_btn_selector"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/mulai"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_des"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>